--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">СriptoCourse</string>
+    <string name="page_list_name">Currency</string>
     <string name="loading_text">Loading</string>
+
+    <!-- Network -->
+    <string name="network.loading">Загрузка…</string>
+    <string name="network.error">Ошибка запроса</string>
 </resources>
